Fix spacing and responsive-ness issues

--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,8 @@ html{
 #thumbnail{
   -webkit-animation-duration: 2s;
   -webkit-animation-delay: 1s;
+  height: 100%;
+  max-height: 420px;
 }
 
 .comeInUp{
@@ -224,6 +226,7 @@ img{
 
 #thumbnail p {
   font-size: .9em;
+  text-align: center;
 }
 
 
